sandc/test/fixtures/astRegression/shouldFail/productions/anonymousInnerClassInstantiationExpression/PublicInstanceProperty.sand
pub class PublicInstanceProperty {
    foo() {
        new Foo {
            pub x = y;
        }
    }
}